2003-05-19  Christophe Merlet  <redfox@redfoxcenter.org>

	* THANKS: Updated my email.

=== nautilus 2.3.2 ===

2003-05-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.3.2.
	
2003-05-19  Alexander Larsson  <alexl@redhat.com>
	
	* src/file-manager/fm-icon-view.c (play_file):
	mp3 mimetype is now audio/mpeg.

2003-05-18  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-file.c
	(nautilus_file_get_internal): Use eel_uris_match() instead of
	strcmp().

2003-05-16  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c (popup_menu_callback): Return
	TRUE.

2003-05-16  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-emblem-utils.c:
	(is_reserved_keyword), (nautilus_emblem_should_show_in_list):  Add
	the desktop emblem.
	* libnautilus-private/nautilus-file-utilities.c:
	(nautilus_get_desktop_directory_uri_no_create): 
	(get_desktop_path): New functions.
	(nautilus_get_desktop_directory),
	(nautilus_get_desktop_directory_uri): Use get_desktop_path()
	* libnautilus-private/nautilus-file-utilities.h:
	* libnautilus-private/nautilus-file.h:
	* libnautilus-private/nautilus-file.c: (file_is_desktop),
	(get_automatic_emblems_as_integer),
	(prepend_automatic_emblem_names): Add a desktop emblem to the
	desktop directory.

2003-05-16  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c (migrate_old_nautilus_files):
	Migration of old .gnome-desktop.

2003-05-16  Padraig O'Briain  <padraig.obriain@sun.com>

	* src/file-manager/fm-list-view.c:
	Use the signal "popup_menu" to handle Shift+F10 instead of doing 
	it in "key_press_event" signal handler. This fixes bug #103348.
	
2003-05-16  Padraig O'Briain  <padraig.obriain@sun.com>

        * libnautilus-private/nautilus-program-chooser.c:
        (nautilus_program_chooser_instance_init): Add calls to
        gtk_label_set_mnemonic_widget so that ATK relation label-for and
        labelled-by will exist when accessibiity is enabled.