@@ -1,3 +1,10 @@
+2003-05-20  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-application.c (get_desktop_manager_selection,
+	nautilus_application_create_desktop_windows):
+	Get the _NET_DESKTOP_MANAGER selection before creating desktop
+	window.
+
 2003-05-19  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* THANKS: Updated my email.
